<resources>

    <string name="app_name">Bodenschätze</string>


    <string name="empty_basket_msg">Sie haben keine Produkte im Einkaufskorb.</string>
    <string name="product_amount_is_null">Bitte fügen sie eine Mengen größer Null ein.</string>
    <string name="product_amount_empty">Bitte geben sie eine Mengenangabe ein.</string>
    <string name="invalidate_session">Alle Daten löschen</string>
    <string name="login_btn_text">Einloggen</string>
    <string name="bodenschatz_caps">BODENSCHÄTZE</string>@tools:sstring/about_disclaimer
    <string name="zero_price_euro">0,00€</string>
    <string name="zero_count_amount">0</string>
    <string name="zero_kg">0,000</string>




    <string name="content_description_product_image">Produktbild</string>
    <string name="content_description_shopping_cart">Taste zum öffnen des Warenkorbs</string>
    <string name="content_description_back_btn">Taste um zur vorherigen Anzeige zu wechseln.</string>
    <string name="content_description_btn_more_options">Taste um mehr Optionen anzuzeigen.</string>
    <string name="content_description_no_internet">Anzeige Intenet nicht verfügbar.</string>
    <string name="content_description_add_to_shopping_cart">Taste um gewähltes Produkt zum Warenkorb hinzuzufügen.</string>
    <string name="btn_manage_send">Senden</string>
    <string name="btn_manage_my_profile">Mein Profil</string>
    <string name="btn_manage_old_orders">Bestellungen</string>
    <string name="btn_manage_write_msg">Nachricht an Bodenschätze</string>
    <string name="btn_manage_show_write_msg">Nachricht schreiben</string>
    <string name="btn_manage_show_infos">Über mich</string>
    <string name="tv_hint_price">Preis</string>
    <string name="tv_hint_amount">Menge</string>
    <string name="tv_hint_search">Suche</string>
    <string name="btn_add_photo_abort">Abbrechen</string>
    <string name="btn_add_photo_delete_image">Bild löschen</string>
    <string name="btn_add_photo_pick_from_gallery">Photo aus Galerie</string>
    <string name="btn_add_photo_take_picture">Foto machen</string>
    <string name="tv_add_photo_title">Foto hinzufügen</string>
    <string name="btn_basket_finish_set_time">Fertig</string>
    <string name="ck_btn_basket_remind_time_and_place">Markt und Uhrzeit merken</string>
    <string name="tv_basket_title_set_time">Abholung</string>
    <string name="tv_basket_hint_add_msg">Nachricht hinzufügen</string>
    <string name="tv_basket_title">Bestellung</string>
    <string name="btn_basket_send_order">Bestellung senden</string>
    <string name="tv_client_profile_hint_email">E-Mail-Adresse</string>
    <string name="btn_client_profile_save">Speichern</string>
    <string name="tv_client_profile_title">Meine Daten</string>
    <string name="tv_hint_client_profile_displayname">Anzeigename</string>
    <string name="tv_hint_client_profile_phone_number">Telefonnummer</string>
    <string name="btn_client_profile_show_markets">Marktplatz</string>
    <string name="btn_client_profile_pick_up_time">Abholzeit</string>
    <string name="tv_no_internet_no_internet">Keine Internetverbindung</string>
    <string name="btn_no_internet_try_again">Noch mal versuchen</string>


    <string name="developer_error_hint">something went wrong</string>

    <string name="developer">&lt;div class=\'impressum\'>&lt;h1>Impressum&lt;/h1>&lt;p>Angaben gemäß § 5 TMG&lt;/p>&lt;p>Max Muster &lt;br> Musterweg&lt;br> 12345 Musterstadt &lt;br> &lt;/p>&lt;p> &lt;strong>Vertreten durch: &lt;/strong>&lt;br>Max Muster&lt;br>&lt;/p>&lt;p>&lt;strong>Kontakt:&lt;/strong> &lt;br>Telefon: 01234-789456&lt;br>Fax: 1234-56789&lt;br>E-Mail: &lt;a href=\'mailto:max@muster.de\'>max@muster.de&lt;/a>&lt;/br>&lt;/p>&lt;p>&lt;strong>Umsatzsteuer-ID: &lt;/strong> &lt;br>Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: Musterustid.&lt;br>&lt;br>&lt;strong>Wirtschafts-ID: &lt;/strong>&lt;br>Musterwirtschaftsid&lt;br>&lt;/p>&lt;p>&lt;strong>Aufsichtsbehörde:&lt;/strong>&lt;br>Musteraufsicht Musterstadt&lt;br>&lt;/p>&lt;p>&lt;&lt;div class=\'impressum\'>&lt;h1>Impressum&lt;/h1>&lt;p>Angaben gemäß § 5 TMG&lt;/p>&lt;p>Max Muster &lt;br> Musterweg&lt;br> 12345 Musterstadt &lt;br> &lt;/p>&lt;p> &lt;strong>Vertreten durch: &lt;/strong>&lt;br>Max Muster&lt;br>&lt;/p>&lt;p>&lt;strong>Kontakt:&lt;/strong> &lt;br>Telefon: 01234-789456&lt;br>Fax: 1234-56789&lt;br>E-Mail: &lt;a href=\'mailto:max@muster.de\'>max@muster.de&lt;/a>&lt;/br>&lt;/p>&lt;p>&lt;strong>Umsatzsteuer-ID: &lt;/strong> &lt;br>Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: Musterustid.&lt;br>&lt;br>&lt;strong>Wirtschafts-ID: &lt;/strong>&lt;br>Musterwirtschaftsid&lt;br>&lt;/p>&lt;p>&lt;strong>Aufsichtsbehörde:&lt;/strong>&lt;br>Musteraufsicht Musterstadt&lt;br>&lt;/p>&lt;p>&lt;strong>Haftungsausschluss: &lt;/strong>&lt;br>&lt;br>&lt;strong>Datenschutz&lt;/strong>&lt;br>&lt;br>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben. &lt;br>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich. &lt;br>Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.&lt;br>&lt;/p>&lt;br> Website Impressum von &lt;a href="https://www.impressum-generator.de">impressum-generator.de&lt;/a> &lt;/div> strong>Haftungsausschluss: &lt;/strong>&lt;br>&lt;br>&lt;strong>Datenschutz&lt;/strong>&lt;br>&lt;br>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben. &lt;br>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich. &lt;br>Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.&lt;br>&lt;/p>&lt;br> Website Impressum von &lt;a href="https://www.impressum-generator.de">impressum-generator.de&lt;/a> &lt;/div> </string>


</resources>
