<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".basket.BasketFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appointment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="384dp"
        android:padding="16dp"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_set_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fab_green"
            android:text="@string/btn_basket_finish_set_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ck_set_reminder"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fab_green"
            android:text="@string/ck_btn_basket_remind_time_and_place"
            android:textColor="@color/fab_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_set_appointment" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_hide_appointment"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/tv_basket_title_set_time"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_hide_appointment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_market_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:tabBackground="@drawable/tab_layout_background"
            app:tabTextAppearance="@style/MarketPickerTab"
            app:tabIndicator="@null"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_date_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_change_appointment_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_market_container"
            app:tabBackground="@drawable/tab_layout_background"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/ck_set_reminder"

            app:layout_constraintTop_toBottomOf="@id/tl_date_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tv_basket_hint_add_msg"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <TimePicker
            android:id="@+id/tp_set_appointment"
            style="@style/SpinnerTimePicker"
            android:layout_width="0dp"
            android:layout_height="144dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_change_appointment_time"
            app:layout_constraintEnd_toStartOf="@+id/btn_change_appointment_time"
            app:layout_constraintStart_toEndOf="@id/btn_cancel_appointment_time"
            app:layout_constraintTop_toTopOf="@+id/btn_change_appointment_time" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_change_appointment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_basket_show_time_picker"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_appointment_time"
            app:layout_constraintBottom_toBottomOf="@id/tl_date_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tl_date_container" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_cancel_appointment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_clear_green"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/tl_date_container"
            app:layout_constraintEnd_toStartOf="@+id/tp_set_appointment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tl_date_container" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_hide_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_clear_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:layout_marginTop="16dp"
        android:paddingBottom="24dp">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/tv_basket_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_show_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_menu_title"
            android:layout_alignBottom="@id/tv_menu_title"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_appoint"
            app:layout_constraintBottom_toBottomOf="@id/tv_menu_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_menu_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_market_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lines="1"
            app:layout_constraintStart_toStartOf="@id/tv_menu_title"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_title"
            tools:text="Wochenmarkt Onkel Toms Hütte" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_market_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            app:layout_constraintStart_toStartOf="@+id/tv_market_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_market_name"
            tools:text="Do, 25.06.2021 ca. 15:00 Uhr" >
            <requestFocus/>
        </androidx.appcompat.widget.AppCompatTextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_client_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_pick_up_phrase"
            app:layout_constraintEnd_toEndOf="@+id/tv_market_date"
            app:layout_constraintStart_toStartOf="@id/tv_menu_title"
            app:layout_constraintTop_toBottomOf="@id/tv_market_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_client_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/fab_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_client_name_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_product_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:visibility="gone"
            android:textStyle="bold"
            tools:text="15 Produkte"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/order_basket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_basket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/basket_sum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_count"
            tools:itemCount="16"
            tools:listitem="@layout/item_basket" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/basket_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_basket"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_send_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_basket"
            tools:text="Gesamtpreis    12,94€" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_basket"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/fab_green"
            android:text="@string/btn_basket_send_order"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basket_sum" />

        <include
            android:id="@+id/progressss"
            layout="@layout/item_blocking_progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
